# KTest

./: .gitignore  Cargo.toml  flake.nix  test.sh
core/: Cargo.toml
core/src/: err.rs  lib.rs
core/src/config/: config.toml  ktest.rs  make.rs  mod.rs  qemu.rs
lib/: kconfig.sh  prelude.sh  testlib.sh
runner/: Cargo.toml
runner/src/: deps.rs  lib.rs  main.rs
runner/src/commands/: deps.rs
src/: boot.rs  build.rs  err.rs  kconfig.rs  main.rs  make.rs
src/commands/: boot.rs  build.rs  config.rs  make.rs  mod.rs  oldconfig.rs  run.rs
src/config/: config.toml  make.rs  mod.rs  qemu.rs
