[package]
name = "ktest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32", features = [ "rt", "macros", "rt-multi-thread", "process", "fs" ] }
clap = { version = "4.3", features = [ "cargo", "string" ] }
clio = { version = "0.3", features = [ "clap-parse" ] }

config = { version = "0.13", features = [ "toml" ] }
serde = "1.0"
serde_derive = "1.0"

jobserver = { version = "0.1" }
anyhow = { version = "1.0.75", features = ["backtrace"] }
tracing = "0.1.37"
nix = { version = "0.27.1", features = ["feature"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
