[package]
name = "ktest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = [ "cargo", "string" ] }
clio = { version = "0.3", features = [ "clap-parse" ] }

config = { version = "0.13", features = [ "toml" ] }
serde = "1.0"
serde_derive = "1.0"

jobserver = { version = "0.1" }
tracing = "0.1.37"
nix = { version = "0.27.1", features = ["feature"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
procfs = "0.15.1"
