[package]
name = "ktest-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ktest-core = { path = "../core" }

clap = { version = "4.3", features = [ "cargo", "string" ] }
clio = { version = "0.3", features = [ "clap-parse" ] }

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
log = "0.4.20"
